Updated XMLs for build with API 8 target with ADT bundle; removed Lint errors.